<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_save"
        android:icon="@drawable/ic_save"
        android:title="@string/action_save"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_open"
        android:icon="@drawable/ic_folder_open"
        android:title="@string/action_open"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_new"
        android:icon="@drawable/ic_create"
        android:title="@string/action_new"
        app:showAsAction="ifRoom"/>

    <!-- Settings, should always be in the overflow -->
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never"/>
</menu>