<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.admin.mattcode.MainActivity">

    <EditText
        android:id="@+id/codeView"
        android:layout_width="0dp"
        android:layout_height="336dp"
        android:hint="@string/codeViewDefault"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="87dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:background="@drawable/codeviewback"
        android:paddingLeft="5dp"
        app:layout_constraintHorizontal_bias="0.0"
        android:gravity="top|left"/>

    <EditText
        android:id="@+id/codeInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/codeInputDefault"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="33dp"
        app:layout_constraintTop_toBottomOf="@+id/codeView"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="39dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="25dp" />

    <Button
        android:id="@+id/buttonSubmitCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonSubmitCodeText"
        android:layout_marginStart="16dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/codeInput"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toRightOf="@+id/codeInput"
        android:layout_marginLeft="16dp" />


</android.support.constraint.ConstraintLayout>
